--- a/client/treehacksFood.css
+++ b/client/treehacksFood.css
@@ -1,1 +1,27 @@
-/* CSS declarations go here */
+body
+{
+/*    background:url('/images/bg.jpg');
+    background-size: cover;*/
+    width: 100%;
+    position: fixed;
+    height: 100%;
+    font-family: 'Source Sans Pro', sans-serif;
+    margin: 0;
+}
+
+.container
+{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background: linear-gradient(to bottom, #f37d4e, #fe9834);
+    font-family: 'Source Sans Pro', sans-serif;
+}
+
+h1.index-title
+{
+    font-size: 150px;
+    color: #d04514;
+    text-align: center;
+    font-weight: 200;
+}
