--- a/client/treehacksFood.css
+++ b/client/treehacksFood.css
@@ -28,8 +28,73 @@ h1.index-title
 
 .gimme
 {
+	position: relative;
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+	width: 100px;
+	padding: 15px 25px;
+	text-align: center;
+	border-radius: 15px;
+	font-size: 30px;
+	text-decoration: none;
+	color: #d04514;
     -moz-box-shadow:inset 0px 0px 0px 0px #ffb051;
     -webkit-box-shadow:inset 0px 0px 0px 0px #ffb051;
     box-shadow:inset 0px 0px 0px 0px #ffb051;
-    background: linear-gradient(to bottom, #ffb051, #fb9c4a);
+    background: #ffb051;
+	transition: all .5s;
+}
+
+.gimme:hover {
+	background: #d04514;
+	color: #ffb051;
+}
+
+.headerImage {
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	overflow: hidden;
+	height: 400px;
+	width: 100%;
+	background: black;
+}
+
+.headerImage img {
+	position: absolute;
+	width: 100%;
+	height: auto;
+	top: -160%;
+	opacity: .4;
+}
+
+.recipeWrapper {
+	background: none;
+	position: fixed;
+	z-index: 2;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+}
+
+.filler {
+	background: #fd9734;
+	position: absolute;
+	top: 400px;
+	height: auto;
+	width: 100%;
+	z-index: 1;
+}
+
+.filler h1 {
+	margin-top: -350px;
+}
+
+.recipeGradient {
+	background: blue;
+	position: absolute;
+	width: 100%;
+	height: 200px;
+	top: 0px;
 }
