--- a/client/treehacksFood.css
+++ b/client/treehacksFood.css
@@ -9,6 +9,20 @@ body
     margin: 0;
 }
 
+.settings {
+	width: 100%;
+	height: auto;
+	position: relative;
+	text-align: center;
+}
+
+.settings div {
+	color: #d04514;
+	display: inline;
+	margin-left: 10px;
+	margin-right: 20px;
+}
+
 .container
 {
     width: 100%;
@@ -77,7 +91,9 @@ h1.index-title
 	height: 100%;
 	overflow: auto;
 }
-
+.padding {
+	padding: 30px;
+}
 .filler {
 	background: #fd9734;
 	position: absolute;
@@ -89,12 +105,33 @@ h1.index-title
 
 .filler h1 {
 	margin-top: -350px;
+	background: url("https://s3.amazonaws.com/neopets_pictures/Layouts/Tiles/40w.png");
+	padding: 10px;
+	color: white;
+	font-size: 60px;
+	width: auto;
+}
+
+.filler a {
+	color: #d04514;
+	font-weight: bold;
+	text-decoration: none;
+}
+
+.filler a:hover {
+	color: #ffb051;
+}
+
+.filler h2 {
+	font-size: 30px;
 }
 
 .recipeGradient {
-	background: blue;
+	background: url("https://s3.amazonaws.com/lolmypics/gradient.png");
 	position: absolute;
 	width: 100%;
 	height: 200px;
 	top: 0px;
+	margin-top: -200px;
+	z-index: -1;
 }
